<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:id="@+id/Title"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <ImageView
            android:id="@+id/Config_Back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="15dp"
            android:src="@drawable/common_icon_return_n" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/CONFIG"
            android:textColor="@android:color/white"
            android:textSize="16sp" />
    </RelativeLayout>


    <TextView
        android:id="@+id/ACCESSKEY"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/ACCESSKEY"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Title" />

    <EditText
        android:id="@+id/Config_ET_ACCESSKEY"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:hint="@string/HINT_PLEASE_ENTER_ACCESSKEY"
        android:textSize="12sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/ACCESSKEY"
        app:layout_constraintEnd_toStartOf="@+id/Config_Scan_ACCESSKEY"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/ACCESSKEY" />

    <ImageView
        android:id="@+id/Config_Scan_ACCESSKEY"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        android:clickable="true"
        android:focusable="true"
        android:padding="10dp"
        android:src="@drawable/select_scan"
        app:layout_constraintBottom_toBottomOf="@+id/Config_ET_ACCESSKEY"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/SECRETKEY"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/SECRETKEY"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/ACCESSKEY"
        app:layout_constraintTop_toBottomOf="@+id/Config_ET_ACCESSKEY" />


    <EditText
        android:id="@+id/Config_ET_SECRETKEY"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:hint="@string/HINT_PLEASE_ENTER_SECRETKEY"
        android:textSize="12sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/SECRETKEY"
        app:layout_constraintEnd_toStartOf="@+id/Config_Scan_SECRETKEY"
        app:layout_constraintStart_toEndOf="@+id/SECRETKEY" />

    <ImageView
        android:id="@+id/Config_Scan_SECRETKEY"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:clickable="true"
        android:focusable="true"
        android:padding="10dp"
        android:src="@drawable/select_scan"
        app:layout_constraintBottom_toBottomOf="@+id/Config_ET_SECRETKEY"
        app:layout_constraintEnd_toEndOf="@+id/Config_Scan_ACCESSKEY" />

    <TextView
        android:id="@+id/TOKEN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/TOKEN"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/SECRETKEY"
        app:layout_constraintTop_toBottomOf="@+id/Config_ET_SECRETKEY" />


    <EditText
        android:id="@+id/Config_ET_TOKEN"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:hint="@string/HINT_PLEASE_ENTER_TOKEN"
        android:inputType="number"
        android:textSize="12sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/TOKEN"
        app:layout_constraintEnd_toStartOf="@+id/Config_Scan_token"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/TOKEN" />


    <ImageView
        android:id="@+id/Config_Scan_token"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:clickable="true"
        android:focusable="true"
        android:padding="10dp"
        android:src="@drawable/select_scan"
        app:layout_constraintBottom_toBottomOf="@+id/Config_ET_TOKEN"
        app:layout_constraintEnd_toEndOf="@+id/Config_Scan_SECRETKEY" />

    <RadioGroup
        android:id="@+id/RG_Auth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/Config_ET_TOKEN">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Authentication method:    "
            android:textSize="14sp" />

        <RadioButton
            android:id="@+id/Config_Key"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="KEY" />

        <RadioButton
            android:id="@+id/Config_Token"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TOKEN" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/RG_Auth">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Server: "
            android:textSize="14sp" />

        <RadioButton
            android:id="@+id/Config_Release"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="Release" />

        <RadioButton
            android:id="@+id/Config_Debug"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Debug" />

        <RadioButton
            android:id="@+id/Config_Custom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Custom" />
    </RadioGroup>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup">

        <EditText
            android:id="@+id/Config_Custom_PassServer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="16dp"
            android:hint="Please enter pass server"
            android:textSize="12sp"
            app:layout_constraintEnd_toStartOf="@+id/Config_Custom_Passport"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/Config_Custom_Passport"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="8dp"
            android:hint="please enter pass port"
            android:inputType="phone|number"
            android:digits="1234567890"
            android:textSize="12sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/Config_Custom_PassServer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/Config_Custom_PassServer" />

        <EditText
            android:id="@+id/Config_Custom_TurnServer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:hint="Please enter turn server"
            android:textSize="12sp"
            app:layout_constraintEnd_toStartOf="@+id/Config_Custom_TurnPort"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Config_Custom_PassServer" />

        <EditText
            android:id="@+id/Config_Custom_TurnPort"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="8dp"
            android:hint="please enter turn port"
            android:inputType="phone|number"
            android:digits="1234567890"
            android:textSize="12sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/Config_Custom_TurnServer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/Config_Custom_TurnServer" />

        <EditText
            android:id="@+id/Config_Custom_AuthURL"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="please enter Auth url"
            android:textSize="12sp"
            app:layout_constraintEnd_toStartOf="@+id/Config_Scan_AuthURL"
            app:layout_constraintStart_toStartOf="@+id/Config_Custom_TurnServer"
            app:layout_constraintTop_toBottomOf="@+id/Config_Custom_TurnServer" />

        <ImageView
            android:id="@+id/Config_Scan_AuthURL"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@null"
            android:clickable="true"
            android:focusable="true"
            android:padding="10dp"
            android:src="@drawable/select_scan"
            app:layout_constraintBottom_toBottomOf="@+id/Config_Custom_AuthURL"
            app:layout_constraintEnd_toEndOf="@+id/Config_Custom_TurnPort" />
    </android.support.constraint.ConstraintLayout>

    <TextView
        android:id="@+id/tips"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:text="Note: If change server, you must restart the APP. "
        android:textColor="@color/colorAccent"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    <Button
        android:id="@+id/Config_Save"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:text="Save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tips"
        tools:layout_editor_absoluteY="439dp" />


</android.support.constraint.ConstraintLayout>
