<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/whit"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:visibility="gone"
        android:id="@+id/Title"
        android:layout_width="match_parent"
        android:layout_height="50dp" >

        <ImageView
            android:id="@+id/back"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:padding="10dp"
            android:scaleType="centerCrop"
            android:src="@drawable/title_btn_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="视频监控"
            android:textSize="16sp" />
    </RelativeLayout>

    <FrameLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="#000000"
        android:layout_below="@+id/Title">

        <com.worthcloud.avlib.widget.VideoPlayView
            android:id="@+id/P2POperate_VideoPlay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:keepScreenOn="true" />
        <ImageView
            android:id="@+id/status_image"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ImageView
            android:id="@+id/shrink"
            android:visibility="gone"
            android:src="@drawable/record_btn_smallscreen"
            android:layout_gravity="right|bottom"
            android:layout_width="40dp"
            android:layout_height="40dp" />
    </FrameLayout>

    <RelativeLayout
        android:id="@+id/usermenu"
        android:layout_below="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/topmenu"
            android:layout_alignParentTop="true"
            android:orientation="horizontal"
            android:weightSum="5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_weight="1"
                android:id="@+id/hd"
                android:gravity="center"
                android:text="@string/lowquality"
                android:layout_width="0dp"
                android:layout_height="35dp" />

            <View
                style="@style/line"/>

            <ImageView
                android:layout_weight="1"
                android:id="@+id/sound"
                android:src="@drawable/sound"
                android:layout_width="0dp"
                android:layout_height="35dp" />
            <View
                style="@style/line"/>
            <ImageView
                android:layout_weight="1"
                android:id="@+id/screenShot"
                android:src="@drawable/screenshot"
                android:layout_width="0dp"
                android:layout_height="35dp" />
            <View
                style="@style/line"/>
            <ImageView
                android:layout_weight="1"
                android:id="@+id/record"
                android:src="@drawable/record"
                android:background="@color/whit"
                android:layout_width="0dp"
                android:layout_height="35dp" />
            <View
                style="@style/line"/>
            <ImageView
                android:layout_weight="1"
                android:src="@drawable/spread"
                android:id="@+id/fullscreen"
                android:layout_width="0dp"
                android:layout_height="35dp" />

        </LinearLayout>

        <View
            android:layout_below="@+id/topmenu"
            style="@style/hori_line"/>

        <FrameLayout
            android:layout_centerInParent="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/live_talk_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:visibility="visible"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/live_talk"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:padding="10dp"
                    android:clickable="true"
                    android:background="@drawable/touch_bg"
                    android:layout_marginBottom="20dp"
                    android:src="@drawable/chat_big" />

                <TextView
                    android:id="@+id/talk_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/talk_off" />

            </LinearLayout>


            <RelativeLayout
                android:id="@+id/dir_control_layout"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="50dp"
                android:layout_gravity="center"
                android:visibility="gone"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/P2POperate_LEFT"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:clickable="true"
                    android:src="@drawable/left"
                    android:background="@drawable/touch_bg"  />

                <ImageView
                    android:id="@+id/P2POperate_UP"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/up"
                    android:clickable="true"
                    android:background="@drawable/touch_bg"  />

                <ImageView
                    android:id="@+id/P2POperate_RIGHT"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/right"
                    android:clickable="true"
                    android:background="@drawable/touch_bg"  />

                <ImageView
                    android:id="@+id/P2POperate_DOWN"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_alignParentBottom="true"
                    android:src="@drawable/down"
                    android:clickable="true"
                    android:background="@drawable/touch_bg"  />
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/back_play_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:visibility="gone"
                android:orientation="vertical">


            </LinearLayout>
        </FrameLayout>


        <View
            android:layout_above="@+id/bottomMenu"
            style="@style/hori_line"/>


        <LinearLayout
            android:id="@+id/bottomMenu"
            android:orientation="horizontal"
            android:weightSum="3"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/chat_layout"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/live_mode"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/chat"/>
                <TextView
                    android:id="@+id/live_mode_text"
                    android:layout_gravity="center"
                    android:text="@string/talk"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/control_layout"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/control"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/control"/>
                <TextView
                    android:id="@+id/thing_text"
                    android:layout_gravity="center"
                    android:text="@string/control"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/backplay_layout"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/backplay"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/backplay"/>
                <TextView
                    android:id="@+id/backplay_text"
                    android:layout_gravity="center"
                    android:text="@string/backplay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>


    <android.support.constraint.ConstraintLayout
        android:visibility="gone"
        android:layout_below="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="Link Status："
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/P2POperate_LinkStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="un-link"
        android:textSize="12sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/text1"
        app:layout_constraintLeft_toRightOf="@+id/text1" />


    <TextView
        android:id="@+id/text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="Play Status："
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text1" />

    <TextView
        android:id="@+id/P2POperate_playStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Did not start playing"
        android:textSize="12sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/text2"
        app:layout_constraintLeft_toRightOf="@+id/text2" />

    <Button
        android:id="@+id/P2POperate_ReconnectBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="Relink"
        android:textSize="12sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/P2POperate_playBtn"
        app:layout_constraintTop_toBottomOf="@+id/text2" />

    <Button
        android:id="@+id/P2POperate_playBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="Play"
        android:textSize="12sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/P2POperate_ReconnectBtn"
        app:layout_constraintLeft_toRightOf="@+id/P2POperate_ReconnectBtn"
        app:layout_constraintRight_toLeftOf="@+id/P2POperate_StopBtn" />

    <Button
        android:id="@+id/P2POperate_StopBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="STOP"
        android:textSize="12sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/P2POperate_playBtn"
        app:layout_constraintLeft_toRightOf="@+id/P2POperate_playBtn"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/P2POperate_TFInfoBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="TF Card INFO"
        android:textSize="12sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/P2POperate_TFFileBtn"
        app:layout_constraintTop_toBottomOf="@+id/P2POperate_ReconnectBtn" />

    <Button
        android:id="@+id/P2POperate_TFFileBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="TF card file"
        android:textSize="12sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/P2POperate_TFInfoBtn"
        app:layout_constraintLeft_toRightOf="@+id/P2POperate_TFInfoBtn"
        app:layout_constraintRight_toLeftOf="@+id/P2POperate_ScreenShot" />

    <Button
        android:id="@+id/P2POperate_ScreenShot"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="Screenshots"
        android:textSize="12sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/P2POperate_TFFileBtn"
        app:layout_constraintLeft_toRightOf="@+id/P2POperate_TFFileBtn"
        app:layout_constraintRight_toRightOf="parent" />


    <ProgressBar
        android:id="@+id/P2POperate_Progress"
        style="@android:style/Widget.DeviceDefault.ProgressBar.Horizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:max="100"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/P2POperate_TFInfoBtn" />

    <Button
        android:id="@+id/P2POperate_Intercom"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:enabled="false"
        android:text="Intercom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/P2POperate_Progress" />

    <Button
        android:id="@+id/P2POperate_SD"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:enabled="false"
        android:text="SD"
        app:layout_constraintEnd_toStartOf="@+id/P2POperate_HD"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/P2POperate_Intercom" />

    <Button
        android:id="@+id/P2POperate_HD"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:enabled="false"
        android:text="HD"
        app:layout_constraintBaseline_toBaselineOf="@+id/P2POperate_SD"
        app:layout_constraintEnd_toStartOf="@+id/P2POperate_SHD"
        app:layout_constraintStart_toEndOf="@+id/P2POperate_SD" />

    <Button
        android:id="@+id/P2POperate_SHD"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="5dp"
        android:enabled="false"
        android:text="SHD"
        app:layout_constraintBaseline_toBaselineOf="@+id/P2POperate_HD"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/P2POperate_HD" />

    <!--<Button-->
        <!--android:id="@+id/P2POperate_LEFT"-->
        <!--android:layout_width="0dp"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="LEFT"-->
        <!--app:layout_constraintEnd_toStartOf="@+id/P2POperate_RIGHT"-->
        <!--app:layout_constraintHorizontal_bias="0.5"-->
        <!--app:layout_constraintStart_toStartOf="parent"-->
        <!--app:layout_constraintTop_toBottomOf="@+id/P2POperate_SD" />-->

    <!--<Button-->
        <!--android:id="@+id/P2POperate_RIGHT"-->
        <!--android:layout_width="0dp"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="RIGHT"-->
        <!--app:layout_constraintBaseline_toBaselineOf="@+id/P2POperate_LEFT"-->
        <!--app:layout_constraintEnd_toStartOf="@+id/P2POperate_UP"-->
        <!--app:layout_constraintHorizontal_bias="0.5"-->
        <!--app:layout_constraintStart_toEndOf="@+id/P2POperate_LEFT" />-->

    <!--<Button-->
        <!--android:id="@+id/P2POperate_UP"-->
        <!--android:layout_width="0dp"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="UP"-->
        <!--app:layout_constraintBaseline_toBaselineOf="@+id/P2POperate_RIGHT"-->
        <!--app:layout_constraintEnd_toStartOf="@+id/P2POperate_DOWN"-->
        <!--app:layout_constraintHorizontal_bias="0.5"-->
        <!--app:layout_constraintStart_toEndOf="@+id/P2POperate_RIGHT" />-->

    <!--<Button-->
        <!--android:id="@+id/P2POperate_DOWN"-->
        <!--android:layout_width="0dp"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="DOWN"-->
        <!--app:layout_constraintBaseline_toBaselineOf="@+id/P2POperate_UP"-->
        <!--app:layout_constraintEnd_toEndOf="parent"-->
        <!--app:layout_constraintHorizontal_bias="0.5"-->
        <!--app:layout_constraintStart_toEndOf="@+id/P2POperate_UP" />-->

    </android.support.constraint.ConstraintLayout>
</LinearLayout>
